# Repositorio_del_agua_en_Mexico

./: CNAME  README.md  ai-log.md  index.qmd  main.py  pyproject.toml
data/: 6n.1.1_sh_es.csv  desktop.ini
