[project]
name = "repositorio-del-agua-en-mexico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "xlrd>=2.0.2",
]
